--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,16 @@
 			<classifier>models</classifier>
 			<version>3.9.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>2.0.0-alpha7</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>2.0.0-alpha7</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
